@@ -199,7 +199,7 @@ ftp     = "peak.naming.factories.openable:OpenableURL"
 https   = "peak.naming.factories.openable:OpenableURL"
 file    = "peak.naming.factories.openable:FileURL"
 pkgfile = "peak.naming.factories.openable:PkgFileURL"
-icb     = "peak.net.icb:ICB_URL"
+#icb     = "peak.net.icb:ICB_URL"   XXX Can't be parsed yet
 
 
 
@@ -207,10 +207,10 @@ tcp     = "peak.net.sockets.tcpudpURL"
 udp     = "peak.net.sockets.tcpudpURL"
 unix    = "peak.net.sockets.unixURL"
 unix.dg = "peak.net.sockets.unixURL"
-fd	= "peak.net.sockets.fdURL"
+fd	    = "peak.net.sockets.fdURL"
 
 zconfig.schema = "peak.config.load_zconfig:ZConfigSchemaContext"
-shellcmd = "peak.naming.factories.shellcmd:ShellCommandCtx"
+shellcmd       = "peak.naming.factories.shellcmd:ShellCommandCtx"
 
 
 # Data type conversion for database drivers
@@ -232,7 +232,6 @@ shellcmd = "peak.naming.factories.shellcmd:ShellCommandCtx"
 
 [DCOracle2.sql_types]
 * = config.Namespace('peak.sql_types')
-
 
 
 
